2004-04-22  Jean-Louis Martineau <martineau@iro.umontreal.ca>
	Fix by Paul Bijnens <paul.bijnens@xplanation.com>

	* server-src/planner.c (setup_estimate): Only ask for level 0 estimate
	  if strategy is noinc.

2004-04-21  Jean-Louis Martineau <martineau@iro.umontreal.ca>
	Documentation from Paul Bijnens <paul.bijnens@xplanation.com>

	* man/amoverview.8.in: Document results.

2004-04-21  Jean-Louis Martineau <martineau@iro.umontreal.ca>
	Patch by Paul Bijnens <paul.bijnens@xplanation.com>

	* server-src/amoverview.pl.in: Print last two characters.

2004-04-16  Jean-Louis Martineau <martineau@iro.umontreal.ca>

	* changer-src/chg-disk.sh.in: Fix for sh compatibility.

2004-04-14  Jean-Louis Martineau <martineau@iro.umontreal.ca>
	Fix by John Koyle <jkoyle@rfpdepot.com>

	* common-src/protocol.c: Fix EAGAIN on Linux.

2004-04-06  Jean-Louis Martineau <martineau@iro.umontreal.ca>

	New bumppercent global option.
	* example/amanda.conf.in: Document it.
	* man/amanda.8.in: Document it.
	* server-src/amadmin.c (bumpsize): Write it.
	* server-src/conffile.c: Parse it.
	* server-src/conffile.h: Define It.
	* server-src/planner.c (bump_thresh): New size_level_0 parameter,
	  use the new bumppercent option.
	* NEWS: Document it.

2004-04-05  Jean-Louis Martineau <martineau@iro.umontreal.ca>

	* server-src/amadmin.c: Rename host_t to amhost_t.
	* server-src/amcheck.c: Ditto.
	* server-src/amindexd.c: Ditto.
	* server-src/diskfile.c: Ditto.
	* server-src/diskfile.h: Ditto.
	* server-src/driver.c: Ditto.
	* server-src/planner.c: Ditto.

2004-03-26  Jean-Louis Martineau <martineau@iro.umontreal.ca>

	* amplot/amplot.awk: Parse "driver: tape size" line.

2004-03-22  Stefan G. Weichinger <monitor@oops.co.at>

        * server-src/amcheck.c (start_host): Added warning for hostname
	  localhost.
	* docs/TOP-TEN-QUESTIONS: added note about localhost-warning.

2004-03-19  Jean-Louis Martineau <martineau@iro.umontreal.ca>

	* docs/Makefile.am (pkgdata_DATA): Add TOP-TEN-QUESTIONS.
